--- a/src/app/home/html/home.html
+++ b/src/app/home/html/home.html
@@ -2,13 +2,21 @@
 
 	<section class="hero">
 		<div class="container">
-			<div class="content"> 
-				<h2>Yanwen Wang</h2>
-				<h4>Front End Developer</h4>
-				<div class="icon">
-					<a href="https://www.linkedin.com/pub/yanwen-wang/63/550/3b4"><i class="fa fa-linkedin-square fa-3x"></i></a>
-					<a href="https://github.com/Yanwenwang"><i class="fa fa-github-square fa-3x"></i></a>
-					<a href="mailto:someone@yoursite.com?cc=someoneelse@theirsite.com, another@thatsite.com, me@mysite.com&bcc=lastperson@theirsite.com&subject=Big%20News&body=Body-goes-here"><i class="fa fa-envelope-o fa-3x"></i></a>
+			<div class="overlay">
+				<div class="content">
+					<h2>Yanwen Wang</h2>
+					<h4>Front End Developer</h4>
+					<div class="icon">
+						<a href="https://www.linkedin.com/pub/yanwen-wang/63/550/3b4">
+							<i class="fa fa-linkedin-square fa-3x"></i>
+						</a>
+						<a href="https://github.com/Yanwenwang">
+							<i class="fa fa-github-square fa-3x"></i>
+						</a>
+						<a>
+							<i class="fa fa-envelope-o fa-3x"></i>
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -62,5 +70,6 @@
 			</div>
 		</div>
 	</section>
+	
 </div>
 
