--- a/src/main.css
+++ b/src/main.css
@@ -7433,83 +7433,84 @@ h3 {
   @media screen and (min-width: 992px) {
     /* line 7, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
     .home .hero {
-      background: url("../content/images/home-hero.jpg");
-      background-size: cover; }
-      /* line 42, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+      background: url("../content/images/blurred.jpg");
+      background-size: cover;
+      background-position-y: -40px; }
+      /* line 43, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
       .home .hero .overlay {
         top: 0;
         left: 0;
         height: 640px;
         width: 100%;
         position: absolute;
-        background-color: rgba(0, 0, 0, 0.3); }
-      /* line 51, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+        background-color: rgba(0, 0, 0, 0.5); }
+      /* line 52, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
       .home .hero .content {
         margin-top: 223.5px;
         border: 2px solid #f2f2f2;
         padding: 36px 116px; } }
 
-/* line 59, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+/* line 60, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
 .home .backgrounds {
   background: #F5F5F5; }
-  /* line 63, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+  /* line 64, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
   .home .backgrounds .content-container {
     position: relative; }
-  /* line 67, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+  /* line 68, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
   .home .backgrounds .content-container .content {
     color: #81888D; }
-    /* line 69, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+    /* line 70, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
     .home .backgrounds .content-container .content h3 {
       margin-top: 0;
       color: #D75C37; }
-  /* line 72, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+  /* line 73, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
   .home .backgrounds .image-container {
     text-align: center;
     position: relative; }
-  /* line 77, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+  /* line 78, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
   .home .backgrounds .image-container .image {
     background: url("../content/images/home-background.jpg");
     background-size: cover;
     display: inline-block;
     border-radius: 50%; }
   @media screen and (max-width: 991px) {
-    /* line 86, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+    /* line 87, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
     .home .backgrounds .content-container {
       margin-top: 76px; }
-    /* line 90, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+    /* line 91, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
     .home .backgrounds .content-container .content {
       text-align: center;
       line-height: 1.45; }
-      /* line 93, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+      /* line 94, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
       .home .backgrounds .content-container .content h3 {
         text-align: center;
         margin-bottom: 36px; }
-    /* line 96, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+    /* line 97, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
     .home .backgrounds .image-container {
       margin-top: 66px;
       margin-bottom: 76px; }
-    /* line 101, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+    /* line 102, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
     .home .backgrounds .image-container .image {
       height: 280px;
       width: 280px;
       margin-top: 0;
       margin-bottom: 0; } }
   @media screen and (min-width: 992px) {
-    /* line 59, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+    /* line 60, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
     .home .backgrounds {
       height: 620px; }
-      /* line 115, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+      /* line 116, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
       .home .backgrounds .content-container {
         height: 620px; }
-      /* line 119, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+      /* line 120, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
       .home .backgrounds .content-container .content {
         position: absolute;
         top: 50%;
         transform: translate(0, -50%); }
-      /* line 125, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+      /* line 126, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
       .home .backgrounds .image-container {
         height: 620px; }
-      /* line 129, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+      /* line 130, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
       .home .backgrounds .image-container .image {
         height: 350px;
         width: 350px;
@@ -7518,67 +7519,67 @@ h3 {
         left: 50%;
         transform: translate(-50%, -50%); } }
 
-/* line 141, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+/* line 142, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
 .home .programmings {
   background: #F5F5F5; }
-  /* line 145, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+  /* line 146, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
   .home .programmings .content-container {
     position: relative; }
-  /* line 149, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+  /* line 150, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
   .home .programmings .content-container .content {
     color: #81888D; }
-    /* line 152, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+    /* line 153, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
     .home .programmings .content-container .content h3 {
       margin-top: 0;
       color: #D75C37; }
-  /* line 155, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+  /* line 156, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
   .home .programmings .image-container {
     text-align: center;
     position: relative; }
-  /* line 160, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+  /* line 161, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
   .home .programmings .image-container .image {
     background: url("../content/images/home-programming.jpg");
     background-size: cover;
     display: inline-block;
     border-radius: 50%; }
   @media screen and (max-width: 991px) {
-    /* line 141, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+    /* line 142, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
     .home .programmings {
       text-align: center;
       line-height: 1.45; }
-      /* line 172, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+      /* line 173, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
       .home .programmings h3 {
         text-align: center;
         margin-bottom: 36px; }
-      /* line 174, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+      /* line 175, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
       .home .programmings .content-container {
         margin-top: 76px; }
-      /* line 178, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+      /* line 179, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
       .home .programmings .image-container {
         margin-top: 66px;
         margin-bottom: 76px; }
-      /* line 183, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+      /* line 184, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
       .home .programmings .image-container .image {
         height: 280px;
         width: 280px;
         margin-top: 0;
         margin-bottom: 0; } }
   @media screen and (min-width: 992px) {
-    /* line 141, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+    /* line 142, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
     .home .programmings {
       height: 620px; }
-      /* line 195, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+      /* line 196, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
       .home .programmings .content-container {
         height: 620px; }
-      /* line 199, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+      /* line 200, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
       .home .programmings .content-container .content {
         position: absolute;
         top: 50%;
         transform: translate(0, -50%); }
-      /* line 205, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+      /* line 206, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
       .home .programmings .image-container {
         height: 620px; }
-      /* line 209, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
+      /* line 210, /Users/David/Desktop/git/resume/src/app/home/scss/_home.scss */
       .home .programmings .image-container .image {
         height: 350px;
         width: 350px;
